--- a/SC-Minerva/css/templatemo-style.css
+++ b/SC-Minerva/css/templatemo-style.css
@@ -1,6 +1,7 @@
 /* Color variables */
 :root {
   --txt: #7a7a7a;
+  --blue-op: #1F214C;
 }
 
 body {
@@ -187,7 +188,9 @@ header {
   width: 100%;
   height: 140px;
   line-height: 100px;
-  background-color: #45489a;
+  /* background-color: #45489a; */
+  background: rgb(2,0,36);
+  background: linear-gradient(151deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 54%, rgba(0,212,255,1) 100%);
   padding: 20px;
   text-align: center;
 }
