--- a/css/authors-style.css
+++ b/css/authors-style.css
@@ -2,7 +2,7 @@
 	--main: #121212;
 	--dark-text: #222222;
 	--alternative: #F2EFEA;
-	--sky-blue: #048ba8;
+	--sky-blue: #1a7b6e;
 	--green: #306B34;
 	--casi-green: #1a7b6e;
 }
@@ -42,6 +42,7 @@
   background-color: var(--sky-blue);
   border-radius: 25px 25px 0 25px;
 }
+
 .overlay::before,
 .overlay::after{
   content: '';
@@ -50,7 +51,7 @@
   bottom: -40px;
   height: 40px;
   width: 40px;
-  background-color: #4070F4;
+  background-color: #1a7b6e;
 }
 .overlay::after{
   border-radius: 0 25px 0 0;
@@ -64,12 +65,13 @@
   background: #FFF;
   padding: 3px;
 }
+/*  LA ESQUINA DEL CIRCULO DE LA FOTO*/ 
 .card-image .card-img{
   height: 100%;
   width: 100%;
   object-fit: cover;
   border-radius: 50%;
-  border: 4px solid #4070F4;
+  border: 4px solid #F2EFEA;
 }
 .name{
   font-size: 18px;
@@ -86,22 +88,22 @@
   font-size: 16px;
   color: #FFF;
   padding: 8px 16px;
-  background-color: #4d5d8a;
+  background-color: #1a7b6e;
   border-radius: 6px;
   margin: 14px;
   cursor: pointer;
   transition: all 0.3s ease;
 }
 .button:hover{
-  background: #265DF2;
+  background: #1e1f1f;
 }
 
 .swiper-navBtn{
-  color: #6E93f7;
+  color: #070707;
   transition: color 0.3s ease;
 }
 .swiper-navBtn:hover{
-  color: #4070F4;
+  color: #1a7b6e;
 }
 .swiper-navBtn::before,
 .swiper-navBtn::after{
@@ -114,11 +116,11 @@
   left: 0;
 }
 .swiper-pagination-bullet{
-  background-color: #6E93f7;
+  background-color: #090909;
   opacity: 1;
 }
 .swiper-pagination-bullet-active{
-  background-color: #4070F4;
+  background-color: #1a7b6e;
 }
 
 @media screen and (max-width: 768px) {
