no recuerdo que cambié

--- a/css/style.css
+++ b/css/style.css
@@ -134,10 +134,11 @@ ol {
 	margin-bottom: 75px;
 }
 
+/*AUTORES*/
 .section-title h1,
 .section-title h2 {
 	display: inline-block;
-	background: #baff00;
+	background: #1a7b6e;
 	padding: 0 20px;
 	margin-bottom: 0;
 	font-size: 60px;
