texto del libro con leer mas y quitar de la pagina principal vainas innecesarias

--- a/SC-Minerva/css/light-box.css
+++ b/SC-Minerva/css/light-box.css
@@ -1,3 +1,15 @@
+#more {display: none;}
+.button {
+  background-color: #F2EFEA; /* Green */
+  border: none;
+  color: #1a7b6e;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
 /* LIGHT BOX */
 
 body:after {
