--- a/css/style.css
+++ b/css/style.css
@@ -161,13 +161,13 @@ ol {
 	top: 0;
 	left: 0;
 	z-index: 999999;
-	background: #fff;
+	background: var(--dark-text);
 }
 
 .loader {
 	width: 30px;
 	height: 30px;
-	border: 3px solid #000;
+	border: 3px solid var(--sky-blue);
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -392,7 +392,7 @@ ol {
 	left: 9px;
 	top: 9px;
 	border-radius: 50%;
-	border: 2px solid #fff;
+	border: 2px solid var(--sky-blue);
 	z-index: 1;
 }
 
